Bug 415860, Range that selects textContent's last character will select everything when textContent changes, r+sr=sicking, a=mtschrep